--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   background: #f9f7fe;
+  font-family: Poppins;
 }
 
 .app-container {
@@ -8,6 +9,7 @@ body {
   margin: 35px auto;
   padding: 25px 25px 15px 25px;
   border-radius: 15px;
+  box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 .search-form {
@@ -21,6 +23,7 @@ body {
   padding: 10px;
   width: 80%;
   border-radius: 5px;
+  font-size: 15px;
 }
 
 .search-submit {
@@ -31,11 +34,35 @@ body {
   width: 15%;
   border-radius: 5px;
   color: white;
+  font-size: 15px;
 }
 
 .all-data {
   display: flex;
   justify-content: space-between;
+}
+
+strong {
+  color: #f65282;
+}
+.temperature-block {
+  display: flex;
+  margin-top: 10px;
+}
+
+.temp-icon {
+  font-size: 70px;
+  margin: 20px 10px 0 0;
+}
+
+.temp {
+  font-size: 100px;
+  font-weight: 500;
+}
+
+.unit {
+  font-size: 30px;
+  margin-top: 25px;
 }
 
 footer {
