--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,20 @@ strong {
   margin-top: 25px;
 }
 
+.col-2 {
+  text-align: center;
+}
+
+.forecast-icon {
+  max-width: 85%;
+}
+
+.forecast-temp-low,
+.forecast-day {
+  color: black;
+  opacity: 0.4;
+}
+
 footer {
   text-align: center;
   font-size: 14px;
