--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #f9f7fe;
+  background: #fff8d5;
   font-family: Poppins;
 }
 
@@ -13,12 +13,12 @@ body {
 }
 
 .search-form {
-  border-bottom: 1px solid #f9f7fe;
+  border-bottom: 1px solid #deca64;
   padding: 0 0 20px 0;
 }
 
 .search-input {
-  border: none;
+  border: 1px solid #551a8b;
   background: #f9f7fe;
   padding: 10px;
   width: 80%;
@@ -27,7 +27,7 @@ body {
 }
 
 .search-submit {
-  border: none;
+  border: 1px solid #551a8b;
   background: #551a8b;
   padding: 10px;
   margin-left: 5px;
@@ -35,14 +35,27 @@ body {
   border-radius: 5px;
   color: white;
   font-size: 15px;
+  transition: all 00ms ease-in-out;
+}
+
+.search-submit:hover {
+  background: #f9f7fe;
+  color: black;
+  border: 1px solid #551a8b;
+}
+
+h1 {
+  font-size: 50px;
 }
 
 .all-data {
+  margin: 30px 0 10px 0;
   display: flex;
   justify-content: space-between;
 }
 
 .data-details {
+  padding-top: 20px;
   color: gray;
 }
 
@@ -88,6 +101,10 @@ strong {
 footer {
   text-align: center;
   font-size: 14px;
-  border-top: 1px solid #f9f7fe;
-  padding: 10px 0 0 0;
+  border-top: 1px solid #deca64;
+  padding: 20px 0 0 0;
+}
+
+a {
+  color: #551a8b;
 }
